--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.cdnfonts.com/css/ava-meridian" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/averus" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>         
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.cdnfonts.com/css/verona-fff" rel="stylesheet">
+                         
     <title>Falta Uno</title>
   </head>
   <body>
