--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./public/img/lupa.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Alexis Jeria Bocca">
+    <meta name="description" content="Buscar jugadores por comuna cuando te falta uno">
+    <meta name="keywords" content="deporte, futbol, comunidad, falta, uno, reunion, amigos, jugadores, chile, comuna">
     <link href="https://fonts.cdnfonts.com/css/ava-meridian" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/averus" rel="stylesheet">
